--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "20.11.1"
+  },
   "name": "major-project",
   "version": "1.0.0",
   "description": "",
@@ -9,8 +12,12 @@
   "author": "yogesh",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.0",
+    "cloudinary": "^2.4.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
@@ -18,7 +25,10 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   }
